fix: fixed the padding so the container doesn't overflow the screen

--- a/client/src/components/Macronutrients/Macronutrients.module.css
+++ b/client/src/components/Macronutrients/Macronutrients.module.css
@@ -91,6 +91,7 @@
     gap: 2rem;
     width: 60%;
     margin: 0 auto;
+    padding: 5rem 0;
 }
 
 .product-item {
